@@ -4013,6 +4013,21 @@ name|finfo
 operator|.
 name|add
 argument_list|(
+literal|"similarity"
+argument_list|,
+name|getSimilarityInfo
+argument_list|(
+name|schema
+operator|.
+name|getSimilarity
+argument_list|()
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|finfo
+operator|.
+name|add
+argument_list|(
 literal|"types"
 argument_list|,
 name|types
