@@ -440,25 +440,49 @@ argument_list|)
 throw|;
 block|}
 block|}
-assert|assert
-literal|null
-operator|!=
-name|defaultSim
-assert|;
-specifier|final
-name|Similarity
-name|defaultSimilarity
-init|=
-name|defaultSim
-decl_stmt|;
 name|similarity
 operator|=
 operator|new
+name|SchemaSimilarity
+argument_list|(
+name|defaultSim
+argument_list|)
+expr_stmt|;
+block|}
+return|return
+name|similarity
+return|;
+block|}
+DECL|class|SchemaSimilarity
+specifier|private
+class|class
+name|SchemaSimilarity
+extends|extends
 name|PerFieldSimilarityWrapper
-argument_list|()
 block|{
+DECL|field|defaultSimilarity
+specifier|private
+name|Similarity
+name|defaultSimilarity
+decl_stmt|;
+DECL|method|SchemaSimilarity
+specifier|public
+name|SchemaSimilarity
+parameter_list|(
+name|Similarity
+name|defaultSimilarity
+parameter_list|)
+block|{
+name|this
+operator|.
+name|defaultSimilarity
+operator|=
+name|defaultSimilarity
+expr_stmt|;
+block|}
 annotation|@
 name|Override
+DECL|method|get
 specifier|public
 name|Similarity
 name|get
@@ -512,12 +536,39 @@ name|similarity
 return|;
 block|}
 block|}
-block|}
-expr_stmt|;
-block|}
+annotation|@
+name|Override
+DECL|method|toString
+specifier|public
+name|String
+name|toString
+parameter_list|()
+block|{
 return|return
-name|similarity
+literal|"SchemaSimilarity. Default: "
+operator|+
+operator|(
+operator|(
+name|get
+argument_list|(
+literal|""
+argument_list|)
+operator|==
+literal|null
+operator|)
+condition|?
+literal|"null"
+else|:
+name|get
+argument_list|(
+literal|""
+argument_list|)
+operator|.
+name|toString
+argument_list|()
+operator|)
 return|;
+block|}
 block|}
 block|}
 end_class
